[package]
name = "tiberius-tls"
version = "0.1.0"
edition = "2018"
publish = ["ktra"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiberius="*"
anyhow="*"
tokio={version="*", features=["macros","rt-multi-thread","io-util","net"]}
tokio-util={version="0.6.4", features=["compat"]}
tokio-stream="*"